# QFlightinstruments

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt  LayoutSquare.cpp  MainWindow.cpp  WidgetAI.cpp  WidgetAI.h  WidgetALT.cpp  WidgetALT.h  WidgetASI.cpp  WidgetASI.h  WidgetEADI.cpp  WidgetEADI.h  WidgetEHSI.cpp  WidgetEHSI.h  WidgetHI.cpp  WidgetHI.h  WidgetSix.cpp  WidgetTC.cpp  WidgetTC.h  WidgetVSI.cpp  WidgetVSI.h
src/: qfi_AI.cpp  qfi_ASI.cpp  qfi_Colors.h  qfi_EADI.cpp  qfi_EADI.h  qfi_HI.cpp
src/qfi/: qfi_AI.h  qfi_ALT.cpp  qfi_ALT.h  qfi_ASI.h  qfi_Colors.cpp  qfi_EHSI.cpp  qfi_EHSI.h  qfi_Fonts.cpp  qfi_Fonts.h  qfi_HI.h  qfi_TC.cpp  qfi_TC.h  qfi_VSI.cpp  qfi_VSI.h
